// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> can be \`fixed\` 1`] = `
<ul
  className="side-nav fixed red"
  id="sidenav_1"
/>
`;

exports[`<SideNav /> renders 1`] = `
<ul
  className="side-nav"
  id="sidenav_0"
/>
`;

exports[`<SideNav /> should be fixed if no trigger is passed 1`] = `
<ul
  className="side-nav fixed red"
  id="sidenav_4"
/>
`;

exports[`<SideNav /> should render fixed if not passed trigger or fixed 1`] = `
<span>
  <button
    className="trigger show-on-large"
    data-activates="sidenav_2"
  >
    Show sidenav
  </button>
  <ul
    className="side-nav red"
    id="sidenav_2"
  />
</span>
`;

exports[`<SideNav /> should render trigger on large screens not fixed\` 1`] = `
<button
  className="trigger show-on-large"
  data-activates="sidenav_3"
>
  Show sidenav
</button>
`;
